# QuanLyDiem_project

./: CMakeLists.txt  DS_Lop.cpp  DS_Lop.h  DS_Lop.ui  DS_SinhVien.cpp  DS_SinhVien.h  DS_SinhVien.ui  README.md  cautrucdulieu.cpp  cautrucdulieu.h  danhsachdangky.cpp  danhsachdangky.h  danhsachdangky.ui  danhsachloptinchi.cpp  danhsachloptinchi.h  danhsachmonhoc.cpp  danhsachmonhoc.h  danhsachmonhoc.txt.txt  danhsachmonhoc.ui  diem_input.cpp  diem_input.h  diem_input.ui  diem_monhoc.cpp  diem_monhoc.h  diem_monhoc.ui  diem_tongket.cpp  diem_tongket.h  diem_tongket.ui  diem_trungbinh.cpp  diem_trungbinh.h  diem_trungbinh.ui  indssvloptinchi.cpp  indssvloptinchi.h  indssvloptinchi.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quanlydiem.cpp  quanlydiem.h  (+7 more)
